update CMakeLists.txt to install source too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,18 @@ include_directories(${TBB_INCLUDE_DIRS})
 include_directories(${ROOT_INCLUDE_DIR})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wno-attributes -Wno-deprecated-declarations -std=c++14")
 add_subdirectory(DataFormats)
+install(DIRECTORY DataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(FWCore)
+install(DIRECTORY FWCore DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(IOMC)
+install(DIRECTORY IOMC DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(IOPool)
+install(DIRECTORY IOPool DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(SimDataFormats)
+install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(Utilities)
+install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
+install(FILES CMakeLists.txt README.md DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
+install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
 
 
